Compiler/y.output
Terminals unused in grammar

   SEMICOLON
   DOUBLE
   VAL_DOUBLE


Grammar

    0 $accept: program $end

    1 program: Starter

    2 Starter: Statement
    3        | Function

    4 Statement: VarDeclaration Starter
    5          | Assign Starter
    6          | FunctionCall Starter
    7          | Condition Starter
    8          | WhileLoop Starter
    9          | DoWhileLoop Starter
   10          | ForLoop Starter
   11          | SwitchCase Starter
   12          | Increment Starter
   13          | Decrement Starter
   14          | ArithmeticAssign Starter
   15          | Return Starter
   16          | '{' Statement '}' Starter
   17          | BREAK ';' Starter
   18          | CONTINUE ';' Starter
   19          | /* empty */

   20 OneLineDeclaration: AssignExp ',' OneLineDeclaration
   21                   | AssignExp ';'
   22                   | IDETIFIER ',' OneLineDeclaration
   23                   | IDETIFIER ';'

   24 VarDeclaration: DataType OneLineDeclaration
   25               | CONSTANT VarDeclaration

   26 Expression: ArithmeticExp
   27           | FunctionCallExp
   28           | RelationalExp
   29           | LogicalExp
   30           | '(' Expression ')'
   31           | ValueTypeAll
   32           | AssignExp
   33           | IncrementExp
   34           | DecrementExp
   35           | ArithmeticAssignExp
   36           | IDETIFIER

   37 ArithmeticExp: Expression '+' Expression
   38              | Expression '-' Expression
   39              | Expression '*' Expression
   40              | Expression '/' Expression
   41              | Expression '%' Expression
   42              | '-' Expression

   43 RelationalExp: Expression OP_EQUALITY Expression
   44              | Expression OP_INEQUALITY Expression
   45              | Expression OP_GREATER_OR_EQUAL Expression
   46              | Expression OP_LESS_OR_EQUAL Expression
   47              | Expression OP_GREATER_THAN Expression
   48              | Expression OP_LESS_THAN Expression

   49 LogicalExp: Expression OP_LOGICAL_OR Expression
   50           | Expression OP_LOGICAL_AND Expression
   51           | OP_LOGICAL_NOT Expression

   52 AssignExp: IDETIFIER '=' Expression

   53 Assign: AssignExp ';'

   54 ArithmeticAssignExp: IDETIFIER OP_PLUS_EQUAL Expression
   55                    | IDETIFIER OP_MINUS_EQUAL Expression
   56                    | IDETIFIER OP_MULTIPLY_EQUAL Expression
   57                    | IDETIFIER OP_DIVIDE_EQUAL Expression
   58                    | IDETIFIER OP_MODULO_EQUAL Expression

   59 ArithmeticAssign: ArithmeticAssignExp ';'

   60 IncrementExp: OP_INCREMENT IDETIFIER
   61             | IDETIFIER OP_INCREMENT

   62 DecrementExp: OP_DECREMENT IDETIFIER
   63             | IDETIFIER OP_DECREMENT

   64 Increment: IncrementExp ';'

   65 Decrement: DecrementExp ';'

   66 Return: RETURN Expression ';'
   67       | RETURN ';'

   68 Function: DataType IDETIFIER '(' Parameters ')' '{' Statement '}'

   69 Condition: IF '(' Expression ')' '{' Statement '}'
   70          | IF '(' Expression ')' '{' Statement '}' ELSE '{' Statement '}'

   71 WhileLoop: WHILE '(' Expression ')' '{' Statement '}'

   72 DoWhileLoop: DO '{' Statement '}' WHILE '(' Expression ')' ';'

   73 ForLoopInit: VarDeclaration
   74            | Assign

   75 ForLoop: FOR '(' ForLoopInit Expression ';' Expression ')' '{' Statement '}'

   76 SwitchValueTypes: VAL_INTEGER
   77                 | VAL_CHAR

   78 Case: CASE SwitchValueTypes ':' Statement Case
   79     | DEFAULT ':' Statement
   80     | /* empty */

   81 SwitchCase: SWITCH '(' IDETIFIER ')' '{' Case '}'

   82 Parameters: DataTypeNoVoid IDETIFIER ',' DataTypeNoVoid IDETIFIER
   83           | DataTypeNoVoid IDETIFIER
   84           | VOID
   85           | /* empty */

   86 Arguments: Expression ',' Arguments
   87          | Expression
   88          | /* empty */

   89 FunctionCallExp: IDETIFIER '(' Arguments ')'

   90 FunctionCall: FunctionCallExp ';'

   91 ValueTypeNumber: VAL_INTEGER
   92                | VAL_FLOAT

   93 ValueTypeLetter: VAL_BOOLEAN
   94                | VAL_CHAR
   95                | VAL_STRING

   96 ValueTypeAll: ValueTypeNumber
   97             | ValueTypeLetter

   98 DataTypeNoVoid: INTEGER
   99               | FLOAT
  100               | CHARACTER
  101               | STRING
  102               | BOOLEAN

  103 DataType: INTEGER
  104         | FLOAT
  105         | CHARACTER
  106         | STRING
  107         | BOOLEAN
  108         | VOID


Terminals, with rules where they appear

$end (0) 0
'%' (37) 41
'(' (40) 30 68 69 70 71 72 75 81 89
')' (41) 30 68 69 70 71 72 75 81 89
'*' (42) 39
'+' (43) 37
',' (44) 20 22 82 86
'-' (45) 38 42
'/' (47) 40
':' (58) 78 79
';' (59) 17 18 21 23 53 59 64 65 66 67 72 75 90
'=' (61) 52
'{' (123) 16 68 69 70 71 72 75 81
'}' (125) 16 68 69 70 71 72 75 81
error (256)
IF (258) 69 70
ELSE (259) 70
FOR (260) 75
WHILE (261) 71 72
DO (262) 72
SWITCH (263) 81
CASE (264) 78
DEFAULT (265) 79
BREAK (266) 17
CONTINUE (267) 18
RETURN (268) 66 67
SEMICOLON (269)
INTEGER (270) 98 103
CHARACTER (271) 100 105
FLOAT (272) 99 104
STRING (273) 101 106
DOUBLE (274)
BOOLEAN (275) 102 107
CONSTANT (276) 25
VOID (277) 84 108
VAL_INTEGER (278) 76 91
VAL_FLOAT (279) 92
VAL_DOUBLE (280)
VAL_STRING (281) 95
VAL_CHAR (282) 77 94
VAL_BOOLEAN (283) 93
IDETIFIER (284) 22 23 36 52 54 55 56 57 58 60 61 62 63 68 81 82 83
    89
OP_INCREMENT (285) 60 61
OP_DECREMENT (286) 62 63
OP_MODULO_EQUAL (287) 58
OP_DIVIDE_EQUAL (288) 57
OP_MULTIPLY_EQUAL (289) 56
OP_MINUS_EQUAL (290) 55
OP_PLUS_EQUAL (291) 54
OP_LOGICAL_OR (292) 49
OP_LOGICAL_AND (293) 50
OP_INEQUALITY (294) 44
OP_EQUALITY (295) 43
OP_GREATER_THAN (296) 47
OP_LESS_THAN (297) 48
OP_GREATER_OR_EQUAL (298) 45
OP_LESS_OR_EQUAL (299) 46
OP_LOGICAL_NOT (300) 51
THEN (301)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
Starter (62)
    on left: 2 3, on right: 1 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
Statement (63)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 2
    16 68 69 70 71 72 75 78 79
OneLineDeclaration (64)
    on left: 20 21 22 23, on right: 20 22 24
VarDeclaration (65)
    on left: 24 25, on right: 4 25 73
Expression (66)
    on left: 26 27 28 29 30 31 32 33 34 35 36, on right: 30 37 38 39
    40 41 42 43 44 45 46 47 48 49 50 51 52 54 55 56 57 58 66 69 70
    71 72 75 86 87
ArithmeticExp (67)
    on left: 37 38 39 40 41 42, on right: 26
RelationalExp (68)
    on left: 43 44 45 46 47 48, on right: 28
LogicalExp (69)
    on left: 49 50 51, on right: 29
AssignExp (70)
    on left: 52, on right: 20 21 32 53
Assign (71)
    on left: 53, on right: 5 74
ArithmeticAssignExp (72)
    on left: 54 55 56 57 58, on right: 35 59
ArithmeticAssign (73)
    on left: 59, on right: 14
IncrementExp (74)
    on left: 60 61, on right: 33 64
DecrementExp (75)
    on left: 62 63, on right: 34 65
Increment (76)
    on left: 64, on right: 12
Decrement (77)
    on left: 65, on right: 13
Return (78)
    on left: 66 67, on right: 15
Function (79)
    on left: 68, on right: 3
Condition (80)
    on left: 69 70, on right: 7
WhileLoop (81)
    on left: 71, on right: 8
DoWhileLoop (82)
    on left: 72, on right: 9
ForLoopInit (83)
    on left: 73 74, on right: 75
ForLoop (84)
    on left: 75, on right: 10
SwitchValueTypes (85)
    on left: 76 77, on right: 78
Case (86)
    on left: 78 79 80, on right: 78 81
SwitchCase (87)
    on left: 81, on right: 11
Parameters (88)
    on left: 82 83 84 85, on right: 68
Arguments (89)
    on left: 86 87 88, on right: 86 89
FunctionCallExp (90)
    on left: 89, on right: 27 90
FunctionCall (91)
    on left: 90, on right: 6
ValueTypeNumber (92)
    on left: 91 92, on right: 96
ValueTypeLetter (93)
    on left: 93 94 95, on right: 97
ValueTypeAll (94)
    on left: 96 97, on right: 31
DataTypeNoVoid (95)
    on left: 98 99 100 101 102, on right: 82 83
DataType (96)
    on left: 103 104 105 106 107 108, on right: 24 68


state 0

    0 $accept: . program $end

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    program              go to state 20
    Starter              go to state 21
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 1

   69 Condition: IF . '(' Expression ')' '{' Statement '}'
   70          | IF . '(' Expression ')' '{' Statement '}' ELSE '{' Statement '}'

    '('  shift, and go to state 42


state 2

   75 ForLoop: FOR . '(' ForLoopInit Expression ';' Expression ')' '{' Statement '}'

    '('  shift, and go to state 43


state 3

   71 WhileLoop: WHILE . '(' Expression ')' '{' Statement '}'

    '('  shift, and go to state 44


state 4

   72 DoWhileLoop: DO . '{' Statement '}' WHILE '(' Expression ')' ';'

    '{'  shift, and go to state 45


state 5

   81 SwitchCase: SWITCH . '(' IDETIFIER ')' '{' Case '}'

    '('  shift, and go to state 46


state 6

   17 Statement: BREAK . ';' Starter

    ';'  shift, and go to state 47


state 7

   18 Statement: CONTINUE . ';' Starter

    ';'  shift, and go to state 48


state 8

   66 Return: RETURN . Expression ';'
   67       | RETURN . ';'

    VAL_INTEGER     shift, and go to state 49
    VAL_FLOAT       shift, and go to state 50
    VAL_STRING      shift, and go to state 51
    VAL_CHAR        shift, and go to state 52
    VAL_BOOLEAN     shift, and go to state 53
    IDETIFIER       shift, and go to state 54
    OP_INCREMENT    shift, and go to state 17
    OP_DECREMENT    shift, and go to state 18
    '-'             shift, and go to state 55
    OP_LOGICAL_NOT  shift, and go to state 56
    '('             shift, and go to state 57
    ';'             shift, and go to state 58

    Expression           go to state 59
    ArithmeticExp        go to state 60
    RelationalExp        go to state 61
    LogicalExp           go to state 62
    AssignExp            go to state 63
    ArithmeticAssignExp  go to state 64
    IncrementExp         go to state 65
    DecrementExp         go to state 66
    FunctionCallExp      go to state 67
    ValueTypeNumber      go to state 68
    ValueTypeLetter      go to state 69
    ValueTypeAll         go to state 70


state 9

  103 DataType: INTEGER .

    $default  reduce using rule 103 (DataType)


state 10

  105 DataType: CHARACTER .

    $default  reduce using rule 105 (DataType)


state 11

  104 DataType: FLOAT .

    $default  reduce using rule 104 (DataType)


state 12

  106 DataType: STRING .

    $default  reduce using rule 106 (DataType)


state 13

  107 DataType: BOOLEAN .

    $default  reduce using rule 107 (DataType)


state 14

   25 VarDeclaration: CONSTANT . VarDeclaration

    INTEGER    shift, and go to state 9
    CHARACTER  shift, and go to state 10
    FLOAT      shift, and go to state 11
    STRING     shift, and go to state 12
    BOOLEAN    shift, and go to state 13
    CONSTANT   shift, and go to state 14
    VOID       shift, and go to state 15

    VarDeclaration  go to state 71
    DataType        go to state 72


state 15

  108 DataType: VOID .

    $default  reduce using rule 108 (DataType)


state 16

   52 AssignExp: IDETIFIER . '=' Expression
   54 ArithmeticAssignExp: IDETIFIER . OP_PLUS_EQUAL Expression
   55                    | IDETIFIER . OP_MINUS_EQUAL Expression
   56                    | IDETIFIER . OP_MULTIPLY_EQUAL Expression
   57                    | IDETIFIER . OP_DIVIDE_EQUAL Expression
   58                    | IDETIFIER . OP_MODULO_EQUAL Expression
   61 IncrementExp: IDETIFIER . OP_INCREMENT
   63 DecrementExp: IDETIFIER . OP_DECREMENT
   89 FunctionCallExp: IDETIFIER . '(' Arguments ')'

    OP_INCREMENT       shift, and go to state 73
    OP_DECREMENT       shift, and go to state 74
    OP_MODULO_EQUAL    shift, and go to state 75
    OP_DIVIDE_EQUAL    shift, and go to state 76
    OP_MULTIPLY_EQUAL  shift, and go to state 77
    OP_MINUS_EQUAL     shift, and go to state 78
    OP_PLUS_EQUAL      shift, and go to state 79
    '='                shift, and go to state 80
    '('                shift, and go to state 81


state 17

   60 IncrementExp: OP_INCREMENT . IDETIFIER

    IDETIFIER  shift, and go to state 82


state 18

   62 DecrementExp: OP_DECREMENT . IDETIFIER

    IDETIFIER  shift, and go to state 83


state 19

   16 Statement: '{' . Statement '}' Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Statement            go to state 84
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 72


state 20

    0 $accept: program . $end

    $end  shift, and go to state 85


state 21

    1 program: Starter .

    $default  reduce using rule 1 (program)


state 22

    2 Starter: Statement .

    $default  reduce using rule 2 (Starter)


state 23

    4 Statement: VarDeclaration . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 86
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 24

   53 Assign: AssignExp . ';'

    ';'  shift, and go to state 87


state 25

    5 Statement: Assign . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 88
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 26

   59 ArithmeticAssign: ArithmeticAssignExp . ';'

    ';'  shift, and go to state 89


state 27

   14 Statement: ArithmeticAssign . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 90
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 28

   64 Increment: IncrementExp . ';'

    ';'  shift, and go to state 91


state 29

   65 Decrement: DecrementExp . ';'

    ';'  shift, and go to state 92


state 30

   12 Statement: Increment . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 93
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 31

   13 Statement: Decrement . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 94
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 32

   15 Statement: Return . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 95
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 33

    3 Starter: Function .

    $default  reduce using rule 3 (Starter)


state 34

    7 Statement: Condition . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 96
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 35

    8 Statement: WhileLoop . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 97
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 36

    9 Statement: DoWhileLoop . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 98
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 37

   10 Statement: ForLoop . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 99
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 38

   11 Statement: SwitchCase . Starter

    IF            shift, and go to state 1
    FOR           shift, and go to state 2
    WHILE         shift, and go to state 3
    DO            shift, and go to state 4
    SWITCH        shift, and go to state 5
    BREAK         shift, and go to state 6
    CONTINUE      shift, and go to state 7
    RETURN        shift, and go to state 8
    INTEGER       shift, and go to state 9
    CHARACTER     shift, and go to state 10
    FLOAT         shift, and go to state 11
    STRING        shift, and go to state 12
    BOOLEAN       shift, and go to state 13
    CONSTANT      shift, and go to state 14
    VOID          shift, and go to state 15
    IDETIFIER     shift, and go to state 16
    OP_INCREMENT  shift, and go to state 17
    OP_DECREMENT  shift, and go to state 18
    '{'           shift, and go to state 19

    $default  reduce using rule 19 (Statement)

    Starter              go to state 100
    Statement            go to state 22
    VarDeclaration       go to state 23
    AssignExp            go to state 24
    Assign               go to state 25
    ArithmeticAssignExp  go to state 26
    ArithmeticAssign     go to state 27
    IncrementExp         go to state 28
    DecrementExp         go to state 29
    Increment            go to state 30
    Decrement            go to state 31
    Return               go to state 32
    Function             go to state 33
    Condition            go to state 34
    WhileLoop            go to state 35
    DoWhileLoop          go to state 36
    ForLoop              go to state 37
    SwitchCase           go to state 38
    FunctionCallExp      go to state 39
    FunctionCall         go to state 40
    DataType             go to state 41


state 39

   90 FunctionCall: FunctionCallExp . ';'

    ';'  shift, and go to state 101


state 40

    6 Statement: FunctionCall . Starter
